...
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/informasi" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/acnes_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/informasiDetail"
...
