<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_detect"
        android:icon="@drawable/ic_detector_blue"
        android:title="@string/title_detect" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_chat" />
    <item
        android:id="@+id/navigation_resultDetect"
        android:icon="@drawable/ic_list"
        android:title="@string/title_resultDetect" />

</menu>